fix margin on #nav to align with logo image

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,6 +65,10 @@ header {
     font-size: 0;
 }
 
+#nav {
+    margin: 0;
+}
+
 #nav li {
     font-size: 14px;
     padding: 0
@@ -100,3 +104,4 @@ header {
     font-weight: 300;
     letter-spacing: 2px;
 }
+
